--- a/index.html
+++ b/index.html
@@ -64,11 +64,31 @@
                 <li>Add hot sauce, salt, and pepper to taste, then serve immediately.</li>
             </ol>
         </section>
+        <section class="action-buttons">
+            <button class="save-btn">Save Recipe</button>
+            <button class="share-btn">Share</button>
+        </section>
+
+        <section class="comments-section">
+            <h2>Comments</h2>
+            <form class="comment-form">
+                <textarea placeholder="Leave a comment..." required></textarea>
+                <button type="submit">Post Comment</button>
+            </form>
+
+            <div class="comment">
+                <p><strong>John Doe:</strong> I tried this recipe and it was delicious! The cheddar cheese made it extra tasty!</p>
+            </div>
+
+            <div class="comment">
+                <p><strong>Jane Smith:</strong> I substituted the turkey hotdogs with chicken sausage, and it worked great!</p>
+            </div>
+        </section>
 
     </div>
 
     <footer>
-        <p>&copy; 2024 Your Recipe Website. All rights reserved.</p>
+        <p>&copy; 2024 Emma Farrar Recipe Website. All rights reserved.</p>
     </footer>
 
 </body>
