--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
             </form>
 
             <div class="comment">
-                <p><strong>John Doe:</strong> I tried this recipe and it was delicious! The cheddar cheese made it extra tasty!</p>
+                <p><strong>Jane Doe:</strong> I tried this recipe and it was delicious! The cheddar cheese made it extra tasty!</p>
             </div>
 
             <div class="comment">
-                <p><strong>Jane Smith:</strong> I substituted the turkey hotdogs with chicken sausage, and it worked great!</p>
+                <p><strong>John Smith:</strong> I substituted the turkey hotdogs with chicken sausage, and it worked great!</p>
             </div>
         </section>
 
