--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A savory and protein-packed Cheesy Broccoli Turkey Dog Scramble recipe.">
     <title>Cheesy Broccoli Turkey Dog Scramble</title>
-    <link rel="stylesheet" href="./style.css/>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
@@ -64,6 +64,7 @@
                 <li>Add hot sauce, salt, and pepper to taste, then serve immediately.</li>
             </ol>
         </section>
+
         <section class="action-buttons">
             <button class="save-btn">Save Recipe</button>
             <button class="share-btn">Share</button>
@@ -77,22 +78,19 @@
             </form>
 
             <div class="comment">
-                <p><strong>Jane Doe:</strong> I tried this recipe and it was delicious! The cheddar cheese made it extra tasty!</p>
+                <p><strong>John Doe:</strong> I tried this recipe and it was delicious! The cheddar cheese made it extra tasty!</p>
             </div>
 
             <div class="comment">
-                <p><strong>John Smith:</strong> I substituted the turkey hotdogs with chicken sausage, and it worked great!</p>
+                <p><strong>Jane Smith:</strong> I substituted the turkey hotdogs with chicken sausage, and it worked great!</p>
             </div>
         </section>
 
     </div>
 
     <footer>
-        <p>&copy; 2024 Emma Farrar Recipe Website. All rights reserved.</p>
+        <p>&copy; 2024 Your Recipe Website. All rights reserved.</p>
     </footer>
 
 </body>
 </html>
-
-
-
