--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A savory and protein-packed Cheesy Broccoli Turkey Dog Scramble recipe.">
     <title>Cheesy Broccoli Turkey Dog Scramble</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/<repo-name>/style.css">
 </head>
 <body>
 
